--- a/server/package.json
+++ b/server/package.json
@@ -19,13 +19,42 @@
     "fs-extra": "^11.3.0",
     "googleapis": "^146.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "lru-cache": "^11.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
     "puppeteer": "^24.4.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "semver": "^7.7.1",
-    "tedious": "^18.1.0"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
+    "three-stdlib": "^2.35.13",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
+  
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
